<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">
    <TextView android:textColor="@color/primary_text_default_material_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/accent_material_light"
        android:text="@string/dayone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.25">
        <TextView
            android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity11"/>
        <TextView
            android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity12"/>
        <TextView
            android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity13"/>
        <TextView
            android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity14"/>
        </LinearLayout>
</LinearLayout>
<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="horizontal"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/accent_material_dark"
        android:padding="10dp"
        android:layout_weight="0.25">
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity21"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity22"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity23"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity24"/>
    </LinearLayout>
    <TextView android:textColor="@color/primary_text_default_material_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/accent_material_light"
        android:text="@string/daytwo"/>
</LinearLayout>
<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="horizontal"
    android:padding="10dp">
<TextView android:textColor="@color/primary_text_default_material_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.75"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/accent_material_light"
    android:text="@string/daythree"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.25">
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity31"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity32"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity33"/>
    </LinearLayout>
</LinearLayout>
<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="horizontal"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.25">
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity41"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity42"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity43"/>
    </LinearLayout>
    <TextView android:textColor="@color/primary_text_default_material_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/accent_material_light"
        android:text="@string/dayfour"/>
</LinearLayout>
<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="horizontal"
    android:padding="10dp">
<TextView android:textColor="@color/primary_text_default_material_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.75"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/accent_material_light"
    android:text="@string/dayfive"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.25">
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity51"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity52"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity53"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="left"
            android:text="@string/activity54"/>
    </LinearLayout>
</LinearLayout>
<LinearLayout
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="horizontal"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/accent_material_dark"
        android:layout_weight="0.25">
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity61"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity62"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity63"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity64"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity65"/>
        <TextView android:textColor="@color/primary_text_default_material_dark"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:text="@string/activity66"/>
    </LinearLayout>
    <TextView android:textColor="@color/primary_text_default_material_dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.75"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/accent_material_light"
        android:text="@string/daysix"/>
</LinearLayout>
</LinearLayout>
</ScrollView>